# Ros2-FaceRT

./: CMakeLists.txt  README.md  package.xml
launch/: rtface_addPerson_launch.py  rtface_cam_launch.py  rtface_detection_launch.py  rtface_display_launch.py  rtface_emo_launch.py  rtface_mask_launch.py  rtface_recognition_launch.py
msg/: IdEmotion.msg  IdImage.msg  IdMask.msg  IdName.msg  ListIdEmotion.msg  ListIdImage.msg  ListIdMask.msg  ListIdName.msg  NameListImage.msg
src/: addPerson_node.cpp  cam_node.cpp  detect_node.cpp  display_node.cpp  emotion_node.cpp  mask_node.cpp  recognize_node.cpp
